# superchandra

./: .gitignore  README.md  chandra123.py  environment-ciao.yml  environment.yml  pyproject.toml  requirements.txt  superchandra.py
.github/: PULL_REQUEST_TEMPLATE_dev_to_master.md
.github/workflows/: build-and-test.yml
.venv312/: pyvenv.cfg
docs/: DEPENDENCIES.md
superchandra/: __init__.py  _version.py  superchandra.py
superchandra/utils/: __init__.py  coord.py  extinction.py  global_defaults.py  io.py  logging.py  math.py  options.py  spectrum.py  validation.py
tests/: README.md  __init__.py  conftest.py  test_chandra.py  test_ciao_integration.py  test_ciao_tools.py  test_cli.py  test_logging.py  test_options.py  test_utils.py
