[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superchandra"
dynamic = ["version"]
description = "Download and analyze Chandra/ACIS data for a position: obs lookup, merge_obs, aperture photometry, flux and upper limits."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "C. D. Kilpatrick" }
]
dependencies = [
    "numpy>=2.4",
    "astropy>=7.2",
    "requests>=2.33",
    "xmltodict>=1.0",
    "photutils>=2.3",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0",
]

[project.scripts]
superchandra = "superchandra.superchandra:main"

[tool.setuptools.dynamic]
version = { attr = "superchandra._version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["superchandra*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "ciao: tests that require CIAO tools (make_instmap_weights, merge_obs)",
    "network: tests that require network access (CDA, IRSA)",
]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
